<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBlue"
    tools:context="com.example.contactapps.view.DetailContactActivity">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/f_header"
            android:name="com.example.contactapps.view.HeaderFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_65sdp"
            android:layout_marginBottom="-12dp"
            app:cardCornerRadius="12dp">

        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp">

            <ImageView
                android:id="@+id/iv_userProfile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_18sdp"
                android:src="@drawable/ic_user"/>

            <TextView
                android:id="@+id/tv_labelFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                android:fontFamily="@font/helvetica_medium"
                android:text="@string/label_first_name"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/_11ssp"/>

            <EditText
                android:id="@+id/et_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/rounded_edit_text"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/_11ssp"
                tools:text="Kazuma"/>

            <TextView
                android:id="@+id/tv_labelLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                android:fontFamily="@font/helvetica_medium"
                android:text="@string/label_last_name"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/_11ssp"/>

            <EditText
                android:id="@+id/et_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/rounded_edit_text"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/_11ssp"
                tools:text="Kiryu"/>

            <TextView
                android:id="@+id/tv_labelAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                android:fontFamily="@font/helvetica_medium"
                android:text="@string/label_age"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/_11ssp"/>

            <EditText
                android:id="@+id/et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                android:background="@drawable/rounded_edit_text"
                android:inputType="numberDecimal"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/_11ssp"
                tools:text="30"/>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_blue"
            android:fontFamily="@font/helvetica__bold"
            android:text="@string/button_save"
            android:textColor="@color/textWhite"
            android:textSize="@dimen/_12ssp"/>

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_red"
            android:fontFamily="@font/helvetica__bold"
            android:text="@string/button_delete"
            android:textColor="@color/textWhite"
            android:textSize="@dimen/_12ssp"/>

    </LinearLayout>
</RelativeLayout>